<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="com.young.presentation.viewmodel.StationTimeTableViewModel" />
    </data>
    <com.young.metro.ui.custom.CustomConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="15dp"
        app:customBackgroundColor="@color/colorBg">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizon_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <com.young.metro.ui.custom.CircleImageView
            android:id="@+id/iv_station_timetable_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cornerRadius="10dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_first_time_title"
            style="@style/BlackTextViewBoldSize15"
            android:text="@string/view_station_first_time"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="@id/iv_station_timetable_bg"
            app:layout_constraintStart_toStartOf="@id/iv_station_timetable_bg"
            app:layout_constraintEnd_toStartOf="@id/gl_horizon_center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_first_time_week_day_title"
            style="@style/BlackTextViewMediumSize13"
            android:text="@string/view_week_day"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_first_time_title"
            app:layout_constraintStart_toStartOf="@id/iv_station_timetable_bg"
            app:layout_constraintEnd_toStartOf="@id/tv_station_timetable_first_time_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_first_time_sat_day_title"
            style="@style/BlackTextViewMediumSize13"
            android:text="@string/view_sat_day"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_first_time_title"
            app:layout_constraintStart_toStartOf="@id/tv_station_timetable_first_time_title"
            app:layout_constraintEnd_toEndOf="@id/tv_station_timetable_first_time_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_first_time_sun_day_title"
            style="@style/BlackTextViewMediumSize13"
            android:text="@string/view_sun_day"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_first_time_title"
            app:layout_constraintStart_toEndOf="@id/tv_station_timetable_first_time_title"
            app:layout_constraintEnd_toEndOf="@id/gl_horizon_center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_last_time_title"
            style="@style/BlackTextViewBoldSize15"
            android:text="@string/view_station_last_time"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="@id/iv_station_timetable_bg"
            app:layout_constraintStart_toEndOf="@id/gl_horizon_center"
            app:layout_constraintEnd_toEndOf="@id/iv_station_timetable_bg"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_last_time_week_day_title"
            style="@style/BlackTextViewMediumSize13"
            android:text="@string/view_week_day"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_last_time_title"
            app:layout_constraintStart_toStartOf="@id/gl_horizon_center"
            app:layout_constraintEnd_toStartOf="@id/tv_station_timetable_last_time_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_last_time_sat_day_title"
            style="@style/BlackTextViewMediumSize13"
            android:text="@string/view_sat_day"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_last_time_title"
            app:layout_constraintStart_toStartOf="@id/tv_station_timetable_last_time_title"
            app:layout_constraintEnd_toEndOf="@id/tv_station_timetable_last_time_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_last_time_sun_day_title"
            style="@style/BlackTextViewMediumSize13"
            android:text="@string/view_sun_day"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_last_time_title"
            app:layout_constraintStart_toEndOf="@id/tv_station_timetable_last_time_title"
            app:layout_constraintEnd_toEndOf="@id/iv_station_timetable_bg"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_first_time_week_txt"
            style="@style/BlackTextViewMediumSize12"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@{vm.timeTableData.get(0).firstTime}"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_first_time_week_day_title"
            app:layout_constraintStart_toStartOf="@id/tv_station_timetable_first_time_week_day_title"
            app:layout_constraintEnd_toEndOf="@id/tv_station_timetable_first_time_week_day_title"
            app:layout_constraintBottom_toBottomOf="@id/iv_station_timetable_bg"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_first_time_sat_txt"
            style="@style/BlackTextViewMediumSize12"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@{vm.timeTableData.get(1).firstTime}"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_first_time_sat_day_title"
            app:layout_constraintStart_toStartOf="@id/tv_station_timetable_first_time_sat_day_title"
            app:layout_constraintEnd_toEndOf="@id/tv_station_timetable_first_time_sat_day_title"
            app:layout_constraintBottom_toBottomOf="@id/iv_station_timetable_bg"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_first_time_sun_txt"
            style="@style/BlackTextViewMediumSize12"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@{vm.timeTableData.get(2).firstTime}"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_first_time_sun_day_title"
            app:layout_constraintStart_toStartOf="@id/tv_station_timetable_first_time_sun_day_title"
            app:layout_constraintEnd_toEndOf="@id/tv_station_timetable_first_time_sun_day_title"
            app:layout_constraintBottom_toBottomOf="@id/iv_station_timetable_bg"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_last_time_week_txt"
            style="@style/BlackTextViewMediumSize12"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@{vm.timeTableData.get(0).lastTime}"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_last_time_week_day_title"
            app:layout_constraintStart_toStartOf="@id/tv_station_timetable_last_time_week_day_title"
            app:layout_constraintEnd_toEndOf="@id/tv_station_timetable_last_time_week_day_title"
            app:layout_constraintBottom_toBottomOf="@id/iv_station_timetable_bg"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_last_time_sat_txt"
            style="@style/BlackTextViewMediumSize12"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@{vm.timeTableData.get(1).lastTime}"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_last_time_sat_day_title"
            app:layout_constraintStart_toStartOf="@id/tv_station_timetable_last_time_sat_day_title"
            app:layout_constraintEnd_toEndOf="@id/tv_station_timetable_last_time_sat_day_title"
            app:layout_constraintBottom_toBottomOf="@id/iv_station_timetable_bg"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_station_timetable_last_time_sun_txt"
            style="@style/BlackTextViewMediumSize12"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@{vm.timeTableData.get(2).lastTime}"
            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_last_time_sun_day_title"
            app:layout_constraintStart_toStartOf="@id/tv_station_timetable_last_time_sun_day_title"
            app:layout_constraintEnd_toEndOf="@id/tv_station_timetable_last_time_sun_day_title"
            app:layout_constraintBottom_toBottomOf="@id/iv_station_timetable_bg"/>

    </com.young.metro.ui.custom.CustomConstraintLayout>

</layout>
