<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.young.presentation.viewmodel.FullRouteInformationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layoutDescription="@xml/scene_main"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            style="@style/GuideLine40Start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            style="@style/GuideLine40End" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.05"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizon_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_station_search"
            style="@style/inputDefaultBox"
            android:hint="@string/hint_main_search_station"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:onClick="@{() -> vm.onSearchEditViewClick(true)}"
            android:text="@={vm._userSearchStationName}"
            app:layout_constraintTop_toBottomOf="@id/gl_top"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintEnd_toEndOf="@id/gl_end" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/close_circle_outline"
            android:onClick="@{() -> vm.onSearchEditViewClear()}"
            setDataCheckVisible="@{vm.userSearchStationName}"
            app:layout_constraintTop_toTopOf="@id/et_station_search"
            app:layout_constraintBottom_toBottomOf="@id/et_station_search"
            app:layout_constraintEnd_toEndOf="@id/et_station_search"
            android:layout_marginEnd="10dp"/>

        <com.young.metro.ui.custom.CircleImageView
            android:id="@+id/iv_main_menu_line_background"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cornerRadius="20dp"
            app:customBackgroundColor="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@id/et_station_search"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintEnd_toEndOf="@id/gl_horizon_center"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_main_menu_line_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_train_white"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="@id/iv_main_menu_line_background"
            app:layout_constraintStart_toStartOf="@id/iv_main_menu_line_background"
            app:layout_constraintEnd_toEndOf="@id/iv_main_menu_line_background"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_main_menu_line_txt"
            style="@style/WhiteTextViewMediumSize14"
            android:gravity="center"
            android:text="@string/main_menu_line_title_txt"
            app:layout_constraintTop_toBottomOf="@id/iv_main_menu_line_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_main_menu_line_background"
            app:layout_constraintStart_toStartOf="@id/iv_main_menu_line_background"
            app:layout_constraintEnd_toEndOf="@id/iv_main_menu_line_background"/>

        <com.young.metro.ui.custom.CircleImageView
            android:id="@+id/iv_main_menu_location_background"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cornerRadius="20dp"
            app:customBackgroundColor="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@id/et_station_search"
            app:layout_constraintStart_toStartOf="@id/gl_horizon_center"
            app:layout_constraintEnd_toEndOf="@id/gl_end"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_main_menu_location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_location_white"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="@id/iv_main_menu_location_background"
            app:layout_constraintStart_toStartOf="@id/iv_main_menu_location_background"
            app:layout_constraintEnd_toEndOf="@id/iv_main_menu_location_background"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_main_menu_location_txt"
            style="@style/WhiteTextViewMediumSize14"
            android:gravity="center"
            android:text="@string/main_menu_location_title_txt"
            app:layout_constraintTop_toBottomOf="@id/iv_main_menu_location_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_main_menu_location_background"
            app:layout_constraintStart_toStartOf="@id/iv_main_menu_location_background"
            app:layout_constraintEnd_toEndOf="@id/iv_main_menu_location_background"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
